Fixed modal and navbar z-index bug

--- a/css/index_style.css
+++ b/css/index_style.css
@@ -81,7 +81,7 @@ section .title::after{
 .navbar{
     position: fixed;
     width: 100%;
-    z-index: 999;
+    z-index: 998;
     padding: 30px 0;
     font-family: 'Ubuntu', sans-serif;
     transition: all 0.3s ease;
@@ -459,7 +459,20 @@ section .title::after{
 
 .text {
     color: white;
+    font-weight: bold;
     font-size: 20px;
+    position: absolute;
+    width: 100%;
+    top: 85%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+.subtitle{
+    color: white;
+    font-size: 15px;
     position: absolute;
     width: 100%;
     top: 90%;
