--- a/css/modal.css
+++ b/css/modal.css
@@ -10,7 +10,7 @@
 } */
 
 .modal {
-  z-index: 99;
+  z-index: 999;
   position: fixed;
   left: 0;
   bottom: 0;
